k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptt-backend
  namespace: ptt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ptt-backend
  template:
    metadata:
      labels:
        app: ptt-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/2023-da-ptt/ptt-backend:latest
          #imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: mqtt
          image: eclipse-mosquitto:latest
          imagePullPolicy: Always
          ports:
            - name: mqtt1
              containerPort: 1883
            - name: mqtt2
              containerPort: 9001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: postgres
          image: postgres:12.11
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: ptt-postgresdata
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      volumes:
        - name: ptt-postgresdata
          persistentVolumeClaim:
            claimName: ptt-postgres-volume-claim
