k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ptt-backend-service
  namespace: ptt
spec:
  selector:
    app: ptt-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
