k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptt-backend-ingress
spec:
  rules:
    - host: "api.perftest.tech"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ptt-backend-service
                port:
                  number: 8080
